--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -13,11 +13,11 @@
     <div class="section profile">
         <div class="profile-image-container">
             <img alt="Profile Picture" class="profile-image" id="myProfile">
-            <span onclick="changeProfileImage()" ><img src="/dist/image/gear.svg" alt="no picture" class="changeProfileImage"></span>
+            <span onclick="changeProfileImage()"><img src="/dist/image/gear.svg" alt="no picture" class="changeProfileImage"></span>
         </div>
         <div class="profile-info">
             <div style="font-size: 23px" id="nickName"></div>
-            <div style="font-size: 13px; color: #b1b1b1" id="email">이메일주소</div>
+            <div style="font-size: 13px; color: #b1b1b1" id="email"></div>
             <div style="font-size: 15px;" id="followInfo"></div>
         </div>
     </div>
