--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -13,6 +13,7 @@
         width: 200px;
         height: 200px;
         margin-top: 20px;
+        border-radius: 50%;
     }
     #title {
         margin-top: 100px;
@@ -20,19 +21,19 @@
     form {
         margin-top: 40px;
     }
+
 </style>
 <body>
 <h2 id="title"></h2>
 <img id="myProfile" alt="no">
-<form action="/user/uploadProfilePicture" method="post" enctype="multipart/form-data" onsubmit="closePopupAndReloadParent()">
-    <input type="hidden" name="userId" value="currentId">
-    <input type="file" name="file" required>
-    <input type="submit" value="등록">
+<form method="post" enctype="multipart/form-data">
+    <input type="hidden" name="currentId" id="idValue">
+    <input type="file" name="file" id="file">
+    <input type="button" value="등록" id="upload">
 </form>
 </body>
 <script>
-    // let currentId = `[[${#authentication.name}]]`;
-    let currentId = 'ehdwo13@gmail.com';
+    let currentId = `[[${#authentication.name}]]`;
 
     //유저정보
     async function getUserInfo(currentId) {
@@ -48,18 +49,15 @@
             console.log(e);
         }
     }
-
+    //프로필이미지띄우기
     function displayProfileImage(profilePath) {
-        document.getElementById('myProfile').src = profilePath;
+        const uploadPath = '/upload/';
+        document.getElementById('myProfile').src = uploadPath + profilePath;
     }
-
-    function closePopupAndReloadParent() {
-        window.opener.location.reload();
-        window.close();
-    }
-
+    //팝업창띄울시 기본로직
     getUserInfo(currentId).then(result => {
-        document.getElementById('myProfile').src = result.profile ? result.profile : "/dist/image/person-circle.svg";
+        document.getElementById('myProfile').src = result.profile ? "" : "/dist/image/person-circle.svg";
+        document.getElementById('idValue').value = currentId;
         if (result.profile == null || result.profile == '') {
             document.getElementById('title').innerText = "프로필 이미지 등록";
         } else {
@@ -67,5 +65,45 @@
             displayProfileImage(result.profile);
         }
     });
+    //업로드버튼누를시
+    document.getElementById('upload').addEventListener('click', async function() {
+        const result = await updateProfile();
+        if (result === "true") {
+            alert('파일이 성공적으로 업로드되었습니다.');
+            if (window.opener) {
+                window.opener.location.reload();
+            }
+            window.close();
+        } else if (result === "false") {
+            alert('파일 업로드에 실패했습니다.');
+        }
+    });
+    //실제로 upload 시키는 비동기함수
+    async function updateProfile() {
+        const imagePattern = /(\.(jpg|jpeg|png|gif))$/i;
+        try {
+            const fileInput = document.getElementById('file');
+            const file = fileInput.files[0];
+
+            if (!file) {
+                alert('파일을 선택해주세요.');
+                return;
+            }
+            if (!imagePattern.test(file.name)) {
+                alert("이미지 파일만 업로드 가능합니다.");
+                return;
+            }
+            const formData = new FormData();
+            formData.append('currentId', document.getElementById('idValue').value);
+            formData.append('file', file);
+            const response = await fetch('/user/uploadProfilePicture', {
+                method: 'POST',
+                body: formData
+            });
+            return await response.text();
+        } catch (error) {
+            console.error('요청을 처리하는 동안 오류가 발생했습니다.', error);
+        }
+    }
 </script>
 </html>
