--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,7 +7,15 @@
     <meta charset="UTF-8">
     <title>제목</title>
     <link rel="stylesheet" th:href="@{/dist/css/reset.css}">
-
+    <script>
+        const options = {
+            method: 'GET',
+            headers: {
+                accept: 'application/json',
+                Authorization: 'Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJhZmRmZTQ3YTQ0NzU2ZTI5MDAyNTcxNWE2YjQyZDhkNSIsIm5iZiI6MTcyMDU1MTg4Mi44MzAxMDcsInN1YiI6IjY2MDNkNTE3NjA2MjBhMDE3YzMwMjY0OCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.kW6FWbNBxEum0GSPLqFOf-LQu3BMA-50-IJXe_Hd3w8'
+            }
+        };
+    </script>
     <style>
         .contain-header{
             width: 100%;
