--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -95,7 +95,9 @@
                     </div>
                 </div>
                 <div class="detail3">
-                    <div id="userId" th:text="${#authentication.name}"></div>
+                    <div id="userId" th:text="${#authentication.name}" style="display: none"></div>
+
+
                 </div>
             </div>
         </div>
