--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div th:text="${userEmail}" style="display: none" id="userEmail"></div>
+<div th:text="${isFollow}" style="display: none" id="isFollow"></div>
 <div class="container">
     <div class="section profile">
         <div class="profile-image-container">
