--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -149,6 +149,9 @@
                  <a onclick="goToMyPage(currentId)">
                      <img id="myProfile">
                  </a>
+                 <a id="test">
+                    이동
+                 </a>
              </li>
          </th:block>
          </ul>
@@ -187,6 +190,10 @@
         document.body.appendChild(form);
         form.submit();
     }
+    document.getElementById('test').addEventListener('click', ()=>{
+        goToMyPage("(kakao)ehdwo13@kakao.com");
+    })
+
 </script>
 <script th:src="@{/dist/js/header.js}"></script>
 <script th:src="@{/dist/js/goToSearch.js}"></script>
