--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -69,6 +69,12 @@
             <button class="details-button">자세히보기</button>
         </div>
     </div>
+    <div class="followActor section">
+        <span>팔로우한 배우</span>
+    </div>
+    <div class="followDirector section">
+        <span>팔로우한 감독</span>
+    </div>
     <div id="modal" class="modal">
         <div class="modal-content" id="modalContent"></div>
         <button id="modalClose">Close</button>
