--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -40,8 +40,7 @@
 </form>
 </body>
 <script>
-    // let currentId = `[[${#authentication.name}]]`;
-    let currentId = 'ehdwo13@gmail.com';
+    let currentId = `[[${#authentication.name}]]`;
 
     //유저정보
     async function getUserInfo(currentId) {
