--- a/src/main/resources/templates/movie/person.html
+++ b/src/main/resources/templates/movie/person.html
@@ -6,8 +6,8 @@
     <th:block th:fragment="content">
         <div class="personDetail">
             <div class="personInfo"></div>
-            <div class="personMovieInfo"><div class="personMovieList personMediaList">참여한 영화</div></div>
-            <div class="personTvInfo"><div class="personTvList personMediaList">참여한 TV 프로그램</div></div>
+            <div class="personMovieInfo"><div class="personMovieList personMediaList">영화</div></div>
+            <div class="personTvInfo"><div class="personTvList personMediaList">TV 프로그램</div></div>
         </div>
     <script th:src="@{/dist/js/detail/personDetail.js}"></script>
     </th:block>
