--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="detail3">
-                    <div class="detailComment">
+                    <div class="detailComment" id="commentArea">
                         <form action="" method="post">
                             <textarea id="commentText" type="text" placeholder="이 작품에 대한 평을 남겨보세요."></textarea>
                             <div class="detail1Review">
@@ -98,6 +98,7 @@
                                 </div>
                                 <div class="detailSubmitBtn">
                                     <button type="button" id="commentBtn">등록</button>
+
                                 </div>
                             </div>
                         </form>
