--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -71,9 +71,11 @@
     </div>
     <div class="followActor section">
         <span>팔로우한 배우</span>
+        <div id="actorContainer"></div>
     </div>
     <div class="followDirector section">
         <span>팔로우한 감독</span>
+        <div id="crewContainer"></div>
     </div>
     <div id="modal" class="modal">
         <button id="modalClose">X</button>
