--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -22,6 +22,7 @@
             <div style="font-size: 13px; color: #b1b1b1" id="email"></div>
             <div style="font-size: 15px;" id="followInfo"></div>
         </div>
+        <button id="goToHome"><a href="/">홈</a></button>
     </div>
     <div class="calendar">
         <div class="calendar-header">
