--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -93,7 +93,7 @@
                             <div class="detail1Review">
                                 <div class="detailCheck">
                                     <label>
-                                        <input type="checkbox" id="spoiler" value="1">스포일러
+                                        <input type="checkbox" id="spoiler" value="">스포일러
                                     </label> <!--밸류값은 생략하면 on 으로 -->
                                 </div>
                                 <div class="detailSubmitBtn">
